@@ -1,3 +1,6 @@
+# $Revision$
+# $Date$
+# $Author$
 use 5.006;
 use ExtUtils::MakeMaker;
 
