@@ -21,6 +21,12 @@ DEPENDENCIES
 
 	XML::Parser
 
+SVN INFO
+
+$Revision$
+$Date$
+$Author$
+
 COPYRIGHT AND LICENCE
 
 Copyright (C) 2007 by Drew Stephens <drew@dinomite.net>
