@@ -1,2 +1,6 @@
+# $Revision$
+# $Date$
+# $Author$
+
 - Better date checking
 - Playlist support
