@@ -119,6 +119,14 @@ L<Mac::iTunes>
 
 Drew Stephens, <lt>drewgstephens@gmail.com<gt>, http://dinomite.net
 
+=head1 SVN INFO
+
+$Revision$
+$Date$
+$Author$
+
+=cut
+
 =head1 COPYRIGHT AND LICENSE
 
 Copyright (C) 2007 by Drew Stephens
