@@ -1,3 +1,7 @@
+# $Revision$
+# $Date$
+# $Author$
+
 Revision history for Perl extension Mac iTunes::Item.
 
 0.10  08 May 2008
